# AadeeIncWebsite

./: .env.example  .gitignore  SETUP_GUIDE.md  test_enhancements.py
server/: .env.example  modal_entry.py  pyproject.toml  requirements.txt
server/app/: action_worker.py  actions_router.py  chat_router.py  google_calendar.py  google_oauth_router.py  main.py  models.py  suggestions_router.py  supabase_client.py
server/app/integrations/: __init__.py  base.py  google_business.py  social_media.py  yelp_business.py
website/: .env.example  index.html  package-lock.json  package.json  vercel.json
website/src/: App.css  App.jsx
website/src/components/: Accordion.jsx  AnimatedHero.jsx  AuthProvider.jsx  ChatWidget.jsx  Footer.jsx  FooterPro.jsx  IndustryGrid.jsx  LogoMarquee.jsx  Navbar.jsx  RequireAuth.jsx  Reveal.jsx  Stats.jsx  WhyAIDiagram.jsx  WhyUs.jsx
website/src/content/: site.json
website/src/lib/: supabaseClient.js
website/src/pages/: About.jsx  Contact.jsx  Home.jsx  Portal.jsx  PortalAdmin.jsx  PortalKingAI.jsx  PortalLogin.jsx  PortalSocial.jsx  PortalTools.jsx  PosterLanding.jsx  Pricing.jsx  Services.jsx
website/src/styles/: effects.css  layout.css  theme.css
